--- a/MMA/build.gradle
+++ b/MMA/build.gradle
@@ -3,9 +3,11 @@
 buildscript {
     repositories {
         jcenter()
+//        maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.0'
+//        compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
